[package]
name = "soupy"
version = "0.5.0"
edition = "2021"
description = "A library for parsing and querying like BeautifulSoup."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/hankjordan/soupy"

[features]
default = ["regex", "html", "xml"]
regex = ["dep:regex"]
html = ["html-lenient", "html-strict"]
html-lenient = ["dep:scraper", "dep:ego-tree"]
html-strict = ["dep:nom"]
xml = ["dep:xmltree"]

[dependencies]
nom = { version = "7.1", optional = true }
regex = { version = "1.9", optional = true }
scraper = { version = "0.19", optional = true }
ego-tree = { version = "0.6", optional = true }
xmltree = { version = "0.10", optional = true }
