[package]
name = "soupy"
version = "0.9.0"
edition = "2021"
description = "A library for querying tree-based formats, similar to BeautifulSoup."
keywords = ["beautifulsoup", "bs4", "soup", "html", "xml"]
categories = ["parsing", "web-programming", "text-processing"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/hankjordan/soupy"

[features]
default = ["regex", "html", "xml"]
regex = ["dep:regex"]
html = ["html-lenient", "html-strict"]
html-lenient = ["dep:scraper", "dep:ego-tree"]
html-strict = ["dep:nom", "dep:phf", "dep:lazy_static", "dep:regex"]
xml = ["dep:xmltree"]

[dependencies]
nom = { version = "7.1", optional = true }
phf = { version = "0.11", features = ["macros"], optional = true }
lazy_static = { version = "1.5", optional = true }
regex = { version = "1.11", optional = true }
scraper = { version = "0.22", optional = true }
ego-tree = { version = "0.10", optional = true }
xmltree = { version = "0.11", optional = true }
